--- a/tugas.html
+++ b/tugas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konsep Layanan Jaringan</title>
+    <title>Tugas</title>
     <!-- Link CSS Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOM7I8H4O8wRsmk6e7kW8vyy4l/6T7w5l3K9jx" crossorigin="anonymous">
@@ -50,7 +50,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/Kurumi-Tokisaki-PNG-Free-Download.png" alt="Logo" style="width: 50px;">
+                <img src="Kurumi-Tokisaki-PNG-Free-Download.png" alt="Logo" style="width: 50px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -142,9 +142,9 @@
 
     </section>
 
-    <footer class="text-center">
+<!--     <footer class="text-center">
         <p>© 2024 Konsep Layanan Jaringan. Semua hak dilindungi.</p>
-    </footer>
+    </footer> -->
 
     <!-- Link JS Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
