--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="hero text-white text-center py-24">
         <h1 class="text-4xl font-bold mb-4 animate-fade-in">Hello, I Iboy</h1>
         <div class="images mb-4">
-            <img src="images/kurumi.png" alt="Kurumi" class="max-w-lg mx-auto rounded-lg shadow-lg">
+            <img src="kurumi.png" alt="Kurumi" class="max-w-lg mx-auto rounded-lg shadow-lg">
         </div>
     </div>
     
@@ -65,10 +65,6 @@
     </style>
     
 
-
-<!--     <footer class="bg-gray-800 text-white text-center py-4">
-        <p></p>
-    </footer> -->
 
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
