--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
     </style>
     
 
-
+<footer class="bg-gray-800 text-white text-center py-4">
+        <p></p>
+    </footer>
+    
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
