--- a/tugas.html
+++ b/tugas.html
@@ -142,9 +142,11 @@
 
     </section>
 
-<!--     <footer class="text-center">
-        <p>© 2024 Konsep Layanan Jaringan. Semua hak dilindungi.</p>
-    </footer> -->
+    <footer class="text-center">
+        <p>
+            
+        </p>
+    </footer>
 
     <!-- Link JS Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
