--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white text-center py-4">
+<!--     <footer class="bg-gray-800 text-white text-center py-4">
         <p>&copy; 2024 Portofolio Saya. Semua hak dilindungi.</p>
-    </footer>
+    </footer> -->
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
