--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- Hero Section -->
     <div class="hero text-white text-center py-24">
-        <h1 class="text-4xl font-bold mb-4 animate-fade-in">Hello, I Iboy</h1>
+        <h1 class="text-4xl font-bold mb-4 animate-fade-in">Hello, Am Iboy</h1>
         <div class="images mb-4 animate-zoom-in">
             <img src="kurumi.png" alt="Kurumi" class="max-w-lg mx-auto rounded-lg shadow-lg hover:shadow-xl hover:scale-105 transition-transform duration-300 ease-in-out">
         </div>
